# Registration-files-generator

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  structures.h  varstorage.cpp  varstorage.h
src/generator/: generator.cpp  generator.h
src/mainwindow/: mainwindow.h
